# R-Type

./: .gitignore  .mergify.yml  Doxyfile  Makefile  README.md  makeDocker  make_client  make_modules  make_rtype  make_server  test_file
.github/workflows/: google-test.yml
CONTRIBUTORS/: README.md
ECS/include/: ECS_Utils.hpp  GameEvents.hpp  System.hpp  entity.hpp  exception.hpp  registry.hpp  sparse_array.hpp
ECS/include/components/: Animatable.hpp  Cliquable.hpp  Components.hpp  Controllable.hpp  Drawable.hpp  DrawableScore.hpp  DrawableText.hpp  FollowPath.hpp  Gravity.hpp  Hitbox.hpp  Jump.hpp  Parallax.hpp  Particulable.hpp  Pet.hpp  Position.hpp  Shootable.hpp  Sound.hpp  Stats.hpp  Velocity.hpp
ECS/src/: FollowPath.cpp  System.cpp  registry.cpp
ECS/src/enemy_paths/: .testing_file.csv  middle_diagonal.csv
boostrap/: main.cpp
bootstrap/: CMakeLists.txt  compile
bootstrap/include/: RenderGame.hpp  bootstrap.h  bootstrap.hpp  components.hpp  entity.hpp  registry.hpp  sparse_array.hpp
bootstrap/include/components/: Components.hpp  Controllable.hpp  Position.hpp  Velocity.hpp
bootstrap/src/: System.cpp  asio.cpp  client.cpp  main.cpp  server.cpp  serveur.cpp
bootstrap/tests/: ecs_tests.cpp
client/: CMakeLists.txt  Dockerfile  clients_tests  compile  ecs_tests  make_client  r-type_client
client/include/: Engine.hpp  Network.hpp  Protocol.hpp  RenderGame.hpp  SFML_utils.hpp  System.hpp  bootstrap.hpp  registry.hpp  sparse_array.hpp  system.hpp
client/include/components/: Components.hpp  Controllable.hpp  FollowPath.hpp  Pet.hpp  SFML_utils.hpp  Velocity.hpp
client/include/utils/: Engine_utils.hpp
client/src/: Engine.cpp  Network.cpp  Protocol.cpp  System.cpp  asio.cpp  main.cpp  main2.cpp
client/src/components/: FollowPath.cpp
client/src/enemy_paths/: upward_curve.csv
client/src/tests/: sample_test.cpp
client/tests/: component_tests.cpp  ecs_tests.cpp  entity_tests.cpp  registry_tests.cpp  sample_test.cpp  sparse_array_tests.cpp
docs/html/: RenderGame_8hpp_source.html  UdpServer_8hpp_source.html  ZipperIterator_8hpp_source.html  annotated.html  bootstrap_8hpp_source.html  classRenderGame-members.html  classRenderGame.html  classUdpServer-members.html  classUdpServer.html  classentity-members.html  classentity.html  classes.html  classmyUdpServer-members.html  classmyUdpServer.html  classregistry-members.html  classregistry.html  classsparse__array-members.html  classsparse__array.html  classzipper__iterator-members.html  classzipper__iterator.html  dir_2b32f7736d6a65027d17676f6279053c.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_5c23080e296bbe846f4ed2d01d7b595d.html  dir_a063914ab482288b7b0e1b2fca86158c.html  dir_b565d458ba0ce2faccd0ea2cd60c04eb.html  dir_db3a54907829b36871118d03417739cd.html  entity_8hpp_source.html  exception_8hpp_source.html  files.html  graph_legend.html  hierarchy.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  (+12 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  searchdata.js
docs/latex/: annotated.tex  classRenderGame.tex  classUdpServer.tex  classentity.tex  classmyUdpServer.tex  classregistry.tex  classsparse__array.tex  classzipper__iterator.tex  hierarchy.tex  refman.tex  structNoEntityFound.tex  structNoEntityFound__coll__graph.md5
graphic/: Makefile
graphic/include/: Graphic_utils.hpp  IGraphic.hpp  LoadLibrary.hpp  Raylib.hpp  SFML.hpp
graphic/include/Raylib/: Raylib.hpp  Raylib_utils.hpp
graphic/include/SFML/: SFML.hpp  SFML_utils.hpp
graphic/src/: LoadLibrary.cpp  Raylib.cpp  RaylibWindow.cpp  SFML.cpp
modules/: CMakeLists.txt  LoadLibrary.cpp  LoadLibrary.hpp  Makefile  make_modules
modules/games/: IGame.hpp
modules/games/Other_game/include/: OtherGame.hpp
modules/games/Other_game/src/: OtherGame.cpp
modules/games/RTYPE_game/include/: Rtype.hpp
modules/games/RTYPE_game/src/: Rtype.cpp
modules/graphics/: IGraphic.hpp  Particle.cpp  Particle.hpp
modules/graphics/Raylib/include/: Raylib.hpp  RaylibParticle.hpp  RaylibWindow.hpp  Raylib_utils.hpp
modules/graphics/Raylib/src/: Raylib.cpp  RaylibParticle.cpp  RaylibWindow.cpp
modules/graphics/SFML/include/: SFML.hpp  SFMLParticle.hpp  SFML_utils.hpp
modules/graphics/SFML/src/: SFML.cpp  SFMLParticle.cpp
network/: README.md
network/include/: AProtocol.hpp  DeleteEntities.hpp  EndpointInformation.hpp  EnemyData.hpp  Header.hpp  IProtocol.hpp  MyNetwork.hpp  Network.hpp  NewPlayer.hpp  PlayerData.hpp  ProjectileData.hpp  Protocol.hpp  ProtocolClient.hpp  ProtocolServer.hpp
network/src/: MyNetwork.cpp  Protocol.cpp
ressources/Raylib/: Bomberman.iqm  BombermanAnim.iqm  raylib.json  ship.iqm  shipAnim.iqm  wizardFinal.iqm  wizardFinalAnim.iqm
ressources/SFML/: sfml.json
server/: CMakeLists.txt  Dockerfile  ecs_tests  make_server  r-type_server
server/include/: CLI.hpp  Engine.hpp  RenderGame.hpp  ZipperIterator.hpp  sparse_array.hpp
server/include/components/: Drawable.hpp
server/include/utils/: Engine_utils.hpp
server/src/: CLI.cpp  Engine.cpp  System.cpp  main.cpp
server/tests/: sample_test.cpp
src/: main.cpp
utils/: Engine_utils.hpp  GameEvents.hpp  keyboard.hpp
utils/JSON/: ReadJson.cpp  ReadJson.hpp
